[package]
name = "owrust"
version = "0.1.0"
authors = ["Paul H Alfille <paul.alfille@gmail.com>"]
edition = "2021"
rust-version = "1.87.0"
description = "1-wire OWFS Rust language command line utilities and library to communicate with owserver"
documentation = "https://alfille.github.io/owrust/index.html"
repository = "https://github.com/alfille/owrust"
license = "MIT"
keywords = ["owfs", "1-wire", "iot", "sensors", "owserver", "DS18S20"]
categories = ["hardware-support", "network-programming"]
readme = "README.md"

[dependencies]
# Command line parsing
pico-args = "0.5.0"
# MD5 hashing for token
md-5 = "0.10.6" # Or latest version
# random for token
rand = "0.8" # for random salt
# bytemuck for bytes to structure conversion
bytemuck = "1.24"
# serial for serial work
serialport = "4.3"
# Error handling
anyhow = "1.0"

[dev-dependencies]
# Add testing dependencies
criterion = "0.5" # For benchmarks

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
